test/TestSuite/Scheduler/Errors/booking_no_duty.tjp
project test "Test" "1.0" 2007-04-26 +2m

resource tux "Tux"

# MARK: error 8 booking_no_duty

task foo "Foo" {
	booking tux 2007-04-26-16:00 +3h
}
